fix title h2s from getting cut off

--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -11,7 +11,7 @@
     right: 20px
     font-size: 0
     line-height: 0
-    margin: 10px 0 0
+    margin: 8px 0 0
 
     transform: translate(0,-50%)
 
@@ -29,7 +29,7 @@
 
     @include respond-above($media_1024)
       @include respond-above-ht($media_ht_560)
-        margin: 18px 0 0
+        margin: 12px 0 0
 
     .title-holder
       position: relative
@@ -42,7 +42,7 @@
         float: left
         height: 24px
         padding: 0 0 9px
-        font: normal normal normal 24px/24px $avenir_bold
+        font: normal normal normal 24px/30px $avenir_bold
         overflow: hidden
         opacity: 0
 
@@ -89,7 +89,7 @@
           height: 30px
           padding: 0 0 12px
           font-size: 30px
-          line-height: 30px
+          line-height: 36px
 
           transform: translate3d(0,0px,0)
 
@@ -120,7 +120,7 @@
             height: 66px
             padding: 0 0 27px
             font-size: 66px
-            line-height: 66px
+            line-height: 80px
 
             transform: translate3d(0,0px,0)
 
